<resources>
    <string name="app_name">Saral Vaastu</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="tab_home">Home</string>
    <string name="tab_you">You</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_invite">Invite Friends</string>
    <string name="tab_plane">For Plan</string>
    <string name="tab_long_long_title">Long Long Title</string>

    <!--Login screen resources-->
    <string name="dont_haveAc">Dont have an account</string>
    <string name="register">Register</string>

    <string name="termandcond">I Agree,Terms &amp; Conditions</string>
    <string name="marri">Marriage &amp; Relationship</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_user_autherise">UserAutheriseActivity</string>

    <string name="fbapp_id">431114927078617</string>
    <string name="title_activity_showcase_guide">Showcase_guide</string>
    <string name="title_activity_test2">test2</string>
    <string name="title_activity_user_profile_">UserProfile_Activity</string>
    <string name="title_activity_edit_profile">EditProfile</string>

    <!--Campass variable-->
    <string name="north">N</string>
    <string name="east">E</string>
    <string name="south">S</string>
    <string name="west">W</string>

    <string name="carrire">Job/Business</string>
    <string name="helth">Health</string>
    <string name="welth">Wealth</string>
    <string name="education">Education</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! Saral Vaastu Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! Saral Vaastu Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>

    <string name="crouton">Done</string>

    <string name="login">Login</string>

    <string name="health">Health</string>
    <string name="wealth">Wealth</string>
    <string name="career">Job/Business</string>
    
    
    <string name="app_email">support@saralvaastu.com</string>
    <string name="support_email">support@saralvaastu.com</string>
    <string name="cgp_contact">+912261092732</string>

<string name="helplineavailability">Our vaastu experts will be available between 8:00 AM to 8:00 PM all days</string>

    <string name="job1">Job/\nBusiness</string>
    <string name="health1">Health</string>
    <string name="wealth1">Wealth</string>
    <string name="education1">Education</string>
    <string name="marriage1">Marriage/\nRelationship</string>

    <string name="feedback_title">Please share your feedback to serve you better.</string>
<string name="about_us"><![CDATA[<html><body style=\"text-align:justify;\"><p align=\"justify\">Saral Vaastu is a part of CG Parivar Group of Companies and is headed by Guruji and has more than 1300+ professionals who are relentlessly striving with the objective of bringing happiness to the people at large across the world and are staying true to the philosophy <b>“Vasudaiva Kutumbakam”</b>, meaning that the whole universe is one family.
<br/>Saral Vaastu is relevant and has been successfully implemented for all types of buildings irrespective of their use like residences, industries, business establishments, lodges, hotels, educational institutes and others.
<br/>Saral Vaastu is currently operational across 11 states and is expanding to have a pan – India footprint.
<br/><b>Till date, Saral Vaastu has over lakhs of happy beneficiaries all over the world who have taken the solutions and are leading a happy and prosperous life.</b>
<\\p><\\body><\\html>]]></string>


    <string name="note2">Note:- Please press the orange button and select the respective theme to know your favorable direction related to different aspects of life.</string>
    <string name="note1">Note:- Your mobile phone does not support gyroscope hence compass feature can not be enabled. Kindly download this app in any other mobile phone which has the gyroscope to enable the compass feature.</string>
    <string name="compass_message"><![CDATA[<html><body style=\"text-align:justify;\">Follow favourable directions to attract prosperity in all aspects of your life
        <br/>Avoid unfavourable directions as it will lead to adversity in all aspects of life.<\\body><\\html>]]>
    </string>
    <string name="direction1">Best for all aspects of life including health, wealth, education, job / business and marriage and relationship.</string>
    <string name="direction2">Attract good Health.</string>
    <string name="direction3">Enhance Marriage prospects and enjoy a happy Relationship.</string>
    <string name="direction4">Memory gain, improved concentration in studies and excel in matters concerning education.</string>
</resources>
