<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.cgp.saral.fragments.HomeTabFragment">

    <RelativeLayout
        android:id="@+id/frhome_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <RelativeLayout
            android:id="@+id/frhome_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text=""
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor_black" />

        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_below="@+id/frhome_cat"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/homeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#fff"
                android:scrollbars="none" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <com.cgp.saral.fab.FloatingActionMenu
             android:id="@+id/home_menu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             fab:menu_labels_ellipsize="end"
             fab:menu_labels_singleLine="true"
             fab:menu_colorNormal="#FF6A00"
             fab:menu_colorPressed="#E75043"
             fab:menu_colorRipple="#99FFFFFF"
             fab:menu_backgroundColor="#ccffffff"
             fab:menu_labels_style="@style/MenuLabelsStyle"

             >

             <com.cgp.saral.fab.FloatingActionButton
                 android:id="@+id/fab_marriage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_marriage_white"
                 fab:fab_size="mini"
                 style="@style/MenuButtonsStyle"
                 fab:fab_label="@string/marri" />

             <com.cgp.saral.fab.FloatingActionButton
                 android:id="@+id/fab_career"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_career"
                 fab:fab_size="mini"
                 fab:fab_label="@string/carrire"
                 style="@style/MenuButtonsStyle"

                 />

             <com.cgp.saral.fab.FloatingActionButton
                 android:id="@+id/fab_edu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_education_white"
                 fab:fab_size="mini"
                 style="@style/MenuButtonsStyle"
                 fab:fab_label="@string/education" />

             <com.cgp.saral.fab.FloatingActionButton
                 android:id="@+id/fab_wealth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_wealth"
                 fab:fab_size="mini"
                 style="@style/MenuButtonsStyle"
                 fab:fab_label="@string/welth" />

             <com.cgp.saral.fab.FloatingActionButton
                 android:id="@+id/fab_health"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_health"
                 fab:fab_size="mini"
                 style="@style/MenuButtonsStyle"
                 fab:fab_label="@string/helth" />

         </com.cgp.saral.fab.FloatingActionMenu>
       <!-- <include layout="@layout/fab"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />-->

    </FrameLayout>
</RelativeLayout>
